test_suite5/ALAN/test_suite/alan-2022-examples/failing/007090_mutation.alan
source L begin put source 2 end
